<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScroll"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    style="@style/AppTheme"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <!-- First row: date string and safe button  -->
        <Button android:id="@+id/viewButton"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/view"
            />
        <Button android:id="@+id/safeButton"
            android:layout_width="35sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/viewButton"
            android:text="@string/safe_short"
            />
        <Button android:id="@+id/menuButton"
            android:layout_width="35sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/safeButton"
            android:text="@string/menu_short"
            />
        <TextView  android:id="@+id/introText"
            style="@style/labelStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/hello"
            android:textSize="25sp"
            />
        <View   android:id="@+id/divider1"
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/viewButton"
            android:background="@color/divider"
            />

        <!-- Second row: logging options  -->
        <CheckBox android:id="@+id/dateCheck"
            style="@style/labelStyle"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_alignParentLeft="true"
            android:text="@string/date_edit"
            />
        <CheckBox android:id="@+id/commentCheck"
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_toRightOf="@id/dateCheck"
            android:text="@string/comment_add"
            />
        <View   android:id="@+id/divider2"
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dateCheck"
            android:background="@color/divider"
            />

        <!-- Third row: Toggles  -->
        <LinearLayout
            android:id="@+id/togglelayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider2"
            android:layout_marginTop="2sp"
            >
            <include android:id="@+id/toggleStub0" layout="@layout/togglestub" />
            <include android:id="@+id/toggleStub1" layout="@layout/togglestub" />
            <include android:id="@+id/toggleStub2" layout="@layout/togglestub" />
            <include android:id="@+id/toggleStub3" layout="@layout/togglestub" />
            <include android:id="@+id/toggleStub4" layout="@layout/togglestub" />
        </LinearLayout>
        <View   android:id="@+id/divider2a"
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/togglelayout"
            android:background="@color/divider"
            />

        <!-- Fourth row: More Toggles  -->
        <LinearLayout
            android:id="@+id/togglelayout2"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider2a"
            android:layout_marginTop="2sp"
            >
            <include android:id="@+id/toggleStub5" layout="@layout/togglestub" />
            <include android:id="@+id/toggleStub6" layout="@layout/togglestub" />
            <include android:id="@+id/toggleStub7" layout="@layout/togglestub" />
            <include android:id="@+id/toggleStub8" layout="@layout/togglestub" />
            <include android:id="@+id/toggleStub9" layout="@layout/togglestub" />
        </LinearLayout>
        <View   android:id="@+id/divider3"
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/togglelayout2"
            android:background="@color/divider"
            />

        <!-- Fifth row and on: Events -->
        <LinearLayout
            android:id="@+id/listLayout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider3"
            >

            <!-- Log Sets -->
            <include android:id="@+id/logstub0" layout="@layout/logstub" />
            <include android:id="@+id/logstub1" layout="@layout/logstub" />
            <include android:id="@+id/logstub2" layout="@layout/logstub" />
            <include android:id="@+id/logstub3" layout="@layout/logstub" />
            <include android:id="@+id/logstub4" layout="@layout/logstub" />
            <include android:id="@+id/logstub5" layout="@layout/logstub" />
            <include android:id="@+id/logstub6" layout="@layout/logstub" />
            <include android:id="@+id/logstub7" layout="@layout/logstub" />
            <include android:id="@+id/logstub8" layout="@layout/logstub" />
            <include android:id="@+id/logstub9" layout="@layout/logstub" />
            <include android:id="@+id/logstub10" layout="@layout/logstub" />
            <include android:id="@+id/logstub11" layout="@layout/logstub" />
            <include android:id="@+id/logstub12" layout="@layout/logstub" />
            <include android:id="@+id/logstub13" layout="@layout/logstub" />
            <include android:id="@+id/logstub14" layout="@layout/logstub" />
            <include android:id="@+id/logstub15" layout="@layout/logstub" />
            <include android:id="@+id/logstub16" layout="@layout/logstub" />
            <include android:id="@+id/logstub17" layout="@layout/logstub" />
            <include android:id="@+id/logstub18" layout="@layout/logstub" />
            <include android:id="@+id/logstub19" layout="@layout/logstub" />
            <include android:id="@+id/logstub20" layout="@layout/logstub" />
            <include android:id="@+id/logstub21" layout="@layout/logstub" />
            <include android:id="@+id/logstub22" layout="@layout/logstub" />
            <include android:id="@+id/logstub23" layout="@layout/logstub" />
            <include android:id="@+id/logstub24" layout="@layout/logstub" />
            <include android:id="@+id/logstub25" layout="@layout/logstub" />
            <include android:id="@+id/logstub26" layout="@layout/logstub" />
            <include android:id="@+id/logstub27" layout="@layout/logstub" />
            <include android:id="@+id/logstub28" layout="@layout/logstub" />
            <include android:id="@+id/logstub29" layout="@layout/logstub" />
            <include android:id="@+id/logstub30" layout="@layout/logstub" />
            <include android:id="@+id/logstub31" layout="@layout/logstub" />
            <include android:id="@+id/logstub32" layout="@layout/logstub" />
            <include android:id="@+id/logstub33" layout="@layout/logstub" />
            <include android:id="@+id/logstub34" layout="@layout/logstub" />
            <include android:id="@+id/logstub35" layout="@layout/logstub" />
            <include android:id="@+id/logstub36" layout="@layout/logstub" />
            <include android:id="@+id/logstub37" layout="@layout/logstub" />
            <include android:id="@+id/logstub38" layout="@layout/logstub" />
            <include android:id="@+id/logstub39" layout="@layout/logstub" />
            <include android:id="@+id/logstub40" layout="@layout/logstub" />
            <include android:id="@+id/logstub41" layout="@layout/logstub" />
            <include android:id="@+id/logstub42" layout="@layout/logstub" />
            <include android:id="@+id/logstub43" layout="@layout/logstub" />
            <include android:id="@+id/logstub44" layout="@layout/logstub" />
            <include android:id="@+id/logstub45" layout="@layout/logstub" />
            <include android:id="@+id/logstub46" layout="@layout/logstub" />
            <include android:id="@+id/logstub47" layout="@layout/logstub" />
            <include android:id="@+id/logstub48" layout="@layout/logstub" />
            <include android:id="@+id/logstub49" layout="@layout/logstub" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
